# rust6502Forge

./: Cargo.toml
forge_lib/: Cargo.toml
forge_lib/src/: address.rs  directive.rs  error.rs  expression.rs  instruction.rs  label.rs  lib.rs  line.rs  linker.rs  mnemonic.rs  object.rs  operand.rs
resources/: assembler.ebnf
resources/test/: linker.ld  snake.asm  snake.out  test_01.asm  test_01.out
