[package]
name = "rust6502_forge"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "bin/assembler",
    "bin/linker",
    "forge_lib"
]

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
