[package]
name = "forge_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
lazy_static = "1.4.0"
strum = "0.25.0"
strum_macros = "0.25.2"
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
semver = { version = "1.0.18", features = ["serde"] }
nom = "7.1.3"
